...
          ?: remember { mutableStateOf(emptyList<SpeechBattle>()) }

  // Create a HashMap of challengerUID to battleID for quick lookup
  val challengerBattleMap =
      remember(pendingBattles) { pendingBattles.associateBy({ it.challenger }, { it.battleId }) }
  ModalNavigationDrawer(
      modifier = Modifier.testTag("viewFriendsDrawerMenu"),
      drawerState = drawerState,
      drawerContent = {
        ModalDrawerSheet {
          Column(modifier = Modifier.fillMaxHeight().padding(AppDimensions.paddingMedium)) {
            Text(
                "Actions",
                modifier = Modifier.testTag("viewFriendsDrawerTitle"),
                style = MaterialTheme.typography.titleMedium,
                color = MaterialTheme.colorScheme.primary)
            Spacer(modifier = Modifier.height(AppDimensions.heightMedium))
            TextButton(
                modifier = Modifier.testTag("viewFriendsAddFriendButton"),
                onClick = {
                  scope.launch {
                    drawerState.close()
                    navigationActions.navigateTo(Screen.ADD_FRIENDS)
                  }
                }) {
                  Text("➕ Add a friend", color = MaterialTheme.colorScheme.onSurface)
                }
            Spacer(modifier = Modifier.height(AppDimensions.paddingMedium))
            TextButton(
                modifier = Modifier.testTag("viewFriendsLeaderboardButton"),
                onClick = {
                  scope.launch {
                    drawerState.close()
                    navigationActions.navigateTo(Screen.LEADERBOARD)
                  }
                }) {
...
                        modifier = Modifier.testTag("myFriendsTitle"),
                        color = MaterialTheme.colorScheme.onSurface)
                  },
                  navigationIcon = {
                    IconButton(
                        onClick = { scope.launch { drawerState.open() } },
                        modifier = Modifier.testTag("viewFriendsMenuButton")) {
                          Icon(
                              Icons.Default.Menu,
                              contentDescription = "Menu",
                              tint = MaterialTheme.colorScheme.onSurface)
                        }
                  },
...
                            },
                            modifier =
                                Modifier.fillMaxWidth(1f)
                                    .horizontalScroll(rememberScrollState())
                                    .wrapContentHeight()
                                    .focusRequester(focusRequester)
                                    .testTag("viewFriendsSearch"),
                            colors =
                                TextFieldDefaults.outlinedTextFieldColors(
                                    backgroundColor = MaterialTheme.colorScheme.surface,
                                    textColor = MaterialTheme.colorScheme.onSurface,
                                    focusedBorderColor = MaterialTheme.colorScheme.outline,
                                    unfocusedBorderColor = MaterialTheme.colorScheme.outlineVariant,
...
                    item {
                      Text(
                          text = "Your Friends",
                          style = MaterialTheme.typography.titleSmall,
                          modifier =
                              Modifier.padding(bottom = AppDimensions.smallPadding)
                                  .testTag("viewFriendsList"),
                          color = MaterialTheme.colorScheme.onSurface)
                    }

                    // Display message if no friends match the search query
                    if (filteredFriends.isEmpty()) {
                      item {
...
