...
            modifier =
                Modifier.fillMaxSize()
                    .padding(innerPadding)
                    .padding(
                        horizontal = AppDimensions.paddingMedium,
                        vertical = AppDimensions.paddingSmall)
                    .testTag("leaderboardList"),
            horizontalAlignment = Alignment.CenterHorizontally) {
              // Row at the top for back button and title
              Row(
                  modifier = Modifier.fillMaxWidth().padding(AppDimensions.paddingMedium),
                  verticalAlignment = Alignment.CenterVertically) {
                    IconButton(
...
                    Spacer(modifier = Modifier.width(AppDimensions.paddingSmall))

                    Text(
                        text = "Leaderboard",
                        style = MaterialTheme.typography.titleMedium,
                        color = MaterialTheme.colorScheme.onSurface,
                        modifier = Modifier.testTag("leaderboardTitle"))
                  }

              // Dropdown selectors and leaderboard list
              ButtonRow()

              Spacer(modifier = Modifier.height(AppDimensions.paddingMedium))
...
