...
  Scaffold(
      topBar = {
        TopAppBar(
            title = {
              Text(
                  "Add a friend",
                  modifier = Modifier.testTag("addFriendTitle"),
                  color = MaterialTheme.colorScheme.onSurface)
            },
            navigationIcon = {
              IconButton(
                  onClick = {
                    navigationActions.goBack() // Navigate back
...
                      expanded = newValue.isNotEmpty()
                    },
                    modifier =
                        Modifier.fillMaxWidth()
                            .wrapContentHeight()
                            .focusRequester(focusRequester)
                            .testTag("addFriendSearchField"),
                    label = {
                      Text(
                          "Username",
                          modifier = Modifier.testTag("searchFieldLabel"),
                          color = MaterialTheme.colorScheme.onSurface)
                    },
...
